# BeeftextAI

./: .gitignore  CLAUDE.md  README.md  build_errors.txt  build_output.txt  build_output2.txt  deploy.ps1  deploy.py  fix_app.js  index.html  latest.json  lint.txt  new_keys.txt  old_key.txt  package-lock.json  package.json  patch.js  releases.txt  secret.key  tauri-build.example  test_latest.json  test_results.txt
.agents/workflows/: deploy.md
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  main.key.pub  new_signer_keys.txt  new_signer_keys.txt.pub  private_key.pem  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: backup.rs  clipboard.rs  engine.rs  group.rs  keyboard.rs  lib.rs  migration.rs  ollama.rs  snippet.rs  store.rs  token.rs  trigger.rs  variable.rs
docs/: QA_Agent_System_Instructions.md  Variables.md  qa_report.md  security_audit.md
scripts/: build-tauri.ps1
src/: App.tsx  i18n.ts  index.css  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  log.txt  main.key  main.key.pub  main.key.raw  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  clipboard.rs  engine.rs  keyboard.rs  lib.rs  main.rs  migration.rs  ollama.rs  snippet.rs  store.rs  trigger.rs  variable.rs
src/components/: SettingsPanel.tsx  SnippetEditor.tsx
tasks/: todo.md
temp/: tmp.key
temp/tmp/: update_css.cjs
