[package]
name = "beeftextai"
version = "0.3.1"
description = "BeefText AI — Modern Text Expander Powered by Ollama"
authors = ["Tedi Rahmat"]
edition = "2021"

[lib]
name = "beeftextai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
arboard = "3"
rdev = "0.5"
dirs = "6"
image = "0.25"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1"
parking_lot = "0.12"
regex = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
